task/GDT-nitf-metadata-extraction
* added new classes NITF and Metadata that specialise
  in extracting the Metadata component from a NITF file

--- a/setup.cfg
+++ b/setup.cfg
@@ -2,7 +2,8 @@
 optimize = 1
 
 [bdist_rpm]
-requires = gdal-python = 1.7.3
+requires = python-oct-utils = 0.03,
+           gdal-python = 1.7.3
 build-requires = rpm-build >= 4.8.0,
                  python-sphinx10 >= 1.0.8,
                  python-unittest2 >= 0.5.1,
