--- a/setup.cfg
+++ b/setup.cfg
@@ -4,7 +4,8 @@ optimize = 1
 [bdist_rpm]
 requires = python-oct-utils = 0.03,
            gdal-python = 1.7.3
-           python-argparse >= 1.2.1
+           python-argparse >= 1.2.1,
+           python-pywebhdfs >= 0.2.3
 build-requires = rpm-build >= 4.8.0,
                  python-sphinx10 >= 1.0.8,
                  python-unittest2 >= 0.5.1,
