--- a/setup.cfg
+++ b/setup.cfg
@@ -5,7 +5,8 @@ optimize = 1
 requires = python-oct-utils = 0.03,
            gdal-python = 1.7.3
            python-argparse >= 1.2.1,
-           python-pywebhdfs >= 0.2.3
+           python-pywebhdfs >= 0.2.3,
+           python-daemoniser >= 0.0.0
 build-requires = rpm-build >= 4.8.0,
                  python-sphinx10 >= 1.0.8,
                  python-unittest2 >= 0.5.1,
