--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,7 @@ python-daemoniser==0.0.0
 python-geolib-mock==0.0.0
 pyaccumulo==1.5.0.6.dev14
 requests==1.1.0
+pywebhdfs==0.2.3
 nose
 unittest2
 coverage
