geoutils/config/initconfig.py * new configuration parser for the geoinit facility
geoutils/bin/geoingest
geoutils/bin/geoinit
* replace config consumption from settings.py to the new
  geoutils.Config

settings.py
* deprecated in favour of the new geoutils.Config

--- a/setup.cfg
+++ b/setup.cfg
@@ -2,13 +2,11 @@
 optimize = 1
 
 [bdist_rpm]
-requires = python-oct-utils = 0.03,
+requires = python-geosutils = 0.05,
            gdal-python = 1.7.3
            python-argparse >= 1.2.1,
            python-pywebhdfs >= 0.2.3,
            python-daemoniser >= 0.0.0
            python-requests >= 1.1.0
 build-requires = rpm-build >= 4.8.0,
-                 python-sphinx10 >= 1.0.8,
-                 python-unittest2 >= 0.5.1,
-                 python-nose1.1 >= 1.1.2
+                 python-sphinx10 >= 1.0.8
