--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,11 @@
---extra-index-url http://repo.corp.f7:8081/artifactory/pip-geospatial-local
+--index-url http://repo.corp.f7:8081/artifactory/pip-geospatial-local
 
 python-geosutils==0.05
 python-daemoniser==0.0.0
 python-geolib-mock==0.0.0
 pyaccumulo==1.5.0.6.dev14
 requests==1.1.0
-pywebhdfs==0.2.3
-nose
-unittest2
-coverage
+python-pywebhdfs==0.2.3
+nose==1.1.2
+unittest2==0.5.1
+coverage==3.7
