task/GDT-372-ingest-multi-thread-support
geoutils/conf/geoutils.conf
geoutils/config/ingestconfig.py
* add new config items threads, inbound_dir and archive_dir

geoutils/bin/geoingest
* the -f switch on the command line implicitly sets batch mode
* geoutils.IngestDaemon.ingest() method now support dry runs

geoutils/datastore.py
* ingest() method now supports a dry run

geoutils/daemon/ingestdaemon.py
geoutils/bin/geoingest
* factor out the facility daemonisation component in to separate
  module

--- a/geoutils/conf/geoutils.conf
+++ b/geoutils/conf/geoutils.conf
@@ -22,15 +22,34 @@
 # a quick reference to the default value.  But you don't have to do this
 # if you feel it clutters your view.
 
-# The "[accumulo_proxy_server]" section are the connection settings for
+# The "[accumulo_proxy_server]" section contains the connection settings for
 # the Accumulo proxy server.
 [accumulo_proxy_server]
-#host = 'localhost'
-#port = 42425
-#user = 'root'
-#password = ''
+#host: localhost
+#port: 42425
+#user: 'root
+#password:
 
-#HDFS_NAMENODE = 'jp2044lm-hdfs-nn01'
-#HDFS_NAMENODE_PORT = 50070
-#HDFS_NAMENODE_USER = None
-#HDFS_TARGET_PATH = 'tmp'
+
+# The "[hdfs_namenode]" section contains the connection settings for
+# the HDFS NameNode
+[hdfs_namenode]
+#host: 'localhost'
+#port: 50070
+#user:
+#target_path: tmp
+
+
+# The "[ingest]" section contains configurable items around the Image
+# Library ingest process.
+[ingest]
+# "threads" controls the number of parallel processes to run during the
+# ingest process.
+#threads: 5
+
+# "inbound_dir" sets the source directory to read ingest files from
+inbound_dir: /var/tmp/geoingest
+
+# "archive_dir" sets the target archive directory to store ingest files to
+# If missing, an attempt will be made to create this directory
+inbound_dir: /var/tmp/geoingest/archive
