--- a/geoutils/config/tests/files/geoutils.conf
+++ b/geoutils/config/tests/files/geoutils.conf
@@ -41,3 +41,8 @@ host: jp2044lm-hdfs-nn01
 port: 50079
 user: hdfs_user
 target_path: tmp
+
+[ingest]
+threads: 10
+inbound_dir: /var/tmp/geoingest
+archive_dir: /var/tmp/geoingest/archive
