task/GDT-372-ingest-multi-thread-support: commit 2
geoutils/daemon/ingestdaemon.py
* integrate multiprocessing module
* new method process() which acts as the multiprocessor target

--- a/geoutils/conf/geoutils.conf
+++ b/geoutils/conf/geoutils.conf
@@ -52,4 +52,4 @@ inbound_dir: /var/tmp/geoingest
 
 # "archive_dir" sets the target archive directory to store ingest files to
 # If missing, an attempt will be made to create this directory
-inbound_dir: /var/tmp/geoingest/archive
+archive_dir: /var/tmp/geoingest/archive
