task/GDT-372-ingest-multi-thread-support: commit 3
geoutils/conf/geoutils.conf
geoutils/config/ingestconfig.py
* support for the new thread_sleep configuration item
* new method process() which acts as the multiprocessor target

geoutils/daemon/ingestdaemon.py
* introduce a file processing exclusion mechanism.  Sounds fancy
  but simply appends ..proc. to the end of the file to indicate
  that it is being processed

geoutils/metadata.py
* update the extract_meta() method so that the ..proc. extension
  is stripped off the file attribute.  This leaves the original
  filename reference unchagned

geoutils/model/image.py
* update the hdfs_write() method so that the target filename does
  not include the processing context extension ..proc.

--- a/geoutils/conf/geoutils.conf
+++ b/geoutils/conf/geoutils.conf
@@ -47,6 +47,11 @@
 # ingest process.
 #threads: 5
 
+# "thread_sleep" is the sleep period between "inbound_dir" polls for
+# new files.  Partial seconds accepted.
+#thread_sleep=2.0
+
+
 # "inbound_dir" sets the source directory to read ingest files from
 inbound_dir: /var/tmp/geoingest
 
