task/GDT-386-geoutils-document-partitioned-indexing-search: commit 2
geoutils/standard.py
* add support for tablet sharding with new attribute meta_shard
  and method get_shard().  This is used to build a code that is used
  as a distributable row_id during ingest
* update the _build_metasearch_data_struct() method so that is
  builds the meta_search table schema with a sharded row_id

geoutils/conf/geoutils.conf
geoutils/config/ingestconfig.py
* add new configurable option .shards.

geoutils/modelbase.py
* new method doc_search() to support intersecting iterator searches
  for document partitioned indexing

geoutils/datastore.py
* integrate the new geoutils.Metasearch() model
* ugly fudge inside the __call__() method to modify the
  Accumulo row_id during ingest based on the name of the table.  This
  is required for the new meta_search table that uses a shard to
  distribute across tablets

--- a/geoutils/conf/geoutils.conf
+++ b/geoutils/conf/geoutils.conf
@@ -49,7 +49,7 @@
 
 # "thread_sleep" is the sleep period between "inbound_dir" polls for
 # new files.  Partial seconds accepted.
-#thread_sleep=2.0
+#thread_sleep: 2.0
 
 
 # "inbound_dir" sets the source directory to read ingest files from
@@ -58,3 +58,6 @@ inbound_dir: /var/tmp/geoingest
 # "archive_dir" sets the target archive directory to store ingest files to
 # If missing, an attempt will be made to create this directory
 archive_dir: /var/tmp/geoingest/archive
+
+# "shards" number of meta_search record distributions.
+#shards: 4
