--- a/setup.cfg
+++ b/setup.cfg
@@ -8,5 +8,6 @@ requires = python-geosutils = 0.0.6,
            python-pywebhdfs >= 0.2.3,
            python-daemoniser >= 0.0.0
            python-requests >= 1.1.0
+           python-imaging >= 1.1.6
 build-requires = rpm-build >= 4.8.0,
                  python-sphinx10 >= 1.0.8
