--- a/setup.cfg
+++ b/setup.cfg
@@ -3,12 +3,12 @@ optimize = 1
 
 [bdist_rpm]
 requires = python-geosutils = 0.0.6,
-           gdal-python = 1.7.3
+           gdal-python = 1.7.3,
            python-argparse >= 1.2.1,
            python-pywebhdfs >= 0.2.3,
-           python-daemoniser >= 0.0.0
-           python-requests >= 1.1.0
-           python-imaging >= 1.1.6,
+           python-daemoniser >= 0.0.0,
+           python-requests >= 1.1.0,
+           python-pillow >= 2.5.3,
            python-shapely >= 1.4.1
 build-requires = rpm-build >= 4.8.0,
                  python-sphinx10 >= 1.0.8
