--- a/setup.cfg
+++ b/setup.cfg
@@ -12,3 +12,7 @@ requires = python-geosutils = 0.0.6,
            python-shapely >= 1.4.1
 build-requires = rpm-build >= 4.8.0,
                  python-sphinx10 >= 1.0.8
+
+[easy_install]
+index-url=http://repo.corp.f7/pypi/simple/
+find-links=http://repo.corp.f7:8081/artifactory/pip-geospatial-local/
