--- a/setup.cfg
+++ b/setup.cfg
@@ -11,7 +11,10 @@ requires = python-geosutils = 0.0.6,
            python-pillow >= 2.5.3,
            python-shapely >= 1.4.1
 build-requires = rpm-build >= 4.8.0,
-                 python-sphinx10 >= 1.0.8
+                 python-sphinx10 >= 1.0.8,
+                 python-unittest2 >= 0.5.1,
+                 python-nose1.1 >= 1.1.2,
+                 python-coverage >= 4.0a0
 
 [easy_install]
 index-url=http://repo.corp.f7/pypi/simple/
