task/GDT-424-cccumulo-spatial-index-stripe-token-algorithm
geoutils/conf/geoutils.conf
geoutils/config/ingestconfig.py
* Added new configuration item .stripes. that controls the number of
  Accumulo tablet servers to distribute spatial index records across.
  Default is 1 for a pseudo-distributed arrangement
* Similar to GeoMesa, added support to our configuration where we can
  also control the ordering of the spatial_temporal_index row_id
  construct. Default is <stripe_token>_<geohash>_<time>

geoutils/standard.py
* support for new attribute {{spatial_stripes}}
* new method get_stripe_token() which accepts the {{stripes}}
  configuration value and generates a hash code

--- a/geoutils/conf/geoutils.conf
+++ b/geoutils/conf/geoutils.conf
@@ -61,3 +61,14 @@ archive_dir: /var/tmp/geoingest/archive
 
 # "shards" number of meta_search record distributions.
 #shards: 4
+
+# The "[spatial]" section contains configurable items around the
+# spatial/temporal index table.
+[spatial]
+# "order" is comma separated list of configuration options used to form the
+# the row_id (separated by underscores).  Supported constructs include
+# "stripe", "geohash" and "reverse_time"
+#order: stripe,geohash,reverse_time
+# "stripes" number of Accumulo tablet servers to distribute spatial
+# index records across.  Default is 1 for a pseudo-distributed arrangement
+#stripes: 1
