--- a/geoutils/config/tests/files/geoutils.conf
+++ b/geoutils/config/tests/files/geoutils.conf
@@ -46,5 +46,9 @@ target_path: tmp
 threads: 10
 inbound_dir: /var/tmp/geoingest
 archive_dir: /var/tmp/geoingest/archive
-thread_sleep=0.5
-shards=10
+thread_sleep: 0.5
+shards: 10
+
+[spatial]
+order: geohash,reverse_time,stripe
+stripes: 10
