--- a/setup.cfg
+++ b/setup.cfg
@@ -9,7 +9,8 @@ requires = python-geosutils = 0.0.6,
            python-daemoniser >= 0.0.0,
            python-requests >= 1.1.0,
            python-shapely >= 1.4.1,
-           python-geohash >= 0.8.5
+           python-geohash >= 0.8.5,
+           pyaccumulo = 1.5.0.6.dev.14
 build-requires = rpm-build >= 4.8.0,
                  python-sphinx10 >= 1.0.8,
                  python-unittest2 >= 0.5.1,
