--- a/setup.cfg
+++ b/setup.cfg
@@ -11,7 +11,8 @@ requires = python-geosutils = 0.0.6,
            python-shapely >= 1.4.1,
            python-geohash >= 0.8.5,
            pyaccumulo = 1.5.0.6.dev.14,
-           python-thrift = 0.9.1
+           python-thrift = 0.9.1,
+           python-imaging = 1.1.6
 build-requires = rpm-build >= 4.8.0,
                  python-sphinx10 >= 1.0.8,
                  python-unittest2 >= 0.5.1,
