task/GDT-242-accumulo-ingest-fixture-set
geoutils/config/stagerconfig.py
* support for new geostager configuration

geoutils/bin/geostager
geoutils/daemon/stagerdaemon.py
* new file staging script

--- a/geoutils/conf/geoutils.conf
+++ b/geoutils/conf/geoutils.conf
@@ -27,14 +27,14 @@
 [accumulo_proxy_server]
 #host: localhost
 #port: 42425
-#user: 'root
+#user: root
 #password:
 
 
 # The "[hdfs_namenode]" section contains the connection settings for
 # the HDFS NameNode
 [hdfs_namenode]
-#host: 'localhost'
+#host: localhost
 #port: 50070
 #user:
 #target_path: tmp
