--- a/geoutils/conf/log.conf
+++ b/geoutils/conf/log.conf
@@ -1,8 +1,8 @@
 [loggers]
-keys=root,geoingest,console
+keys=root,geoingest,geostager,console
 
 [handlers]
-keys=ingestFileHandler,consoleHandler
+keys=ingestFileHandler,stagerFileHandler,consoleHandler
 
 [formatters]
 keys=simpleFormatter
@@ -22,11 +22,22 @@ level=DEBUG
 qualname=geoingest
 handlers=ingestFileHandler
 
+[logger_geostager]
+level=DEBUG
+qualname=geostager
+handlers=stagerFileHandler
+
 [handler_ingestFileHandler]
 class=handlers.TimedRotatingFileHandler
 level=DEBUG
 formatter=simpleFormatter
 args=(os.path.join(os.sep, 'var', 'tmp', 'geoingest.log'), 'midnight')
+
+[handler_stagerFileHandler]
+class=handlers.TimedRotatingFileHandler
+level=DEBUG
+formatter=simpleFormatter
+args=(os.path.join(os.sep, 'var', 'tmp', 'geostager.log'), 'midnight')
 
 [handler_consoleHandler]
 class=StreamHandler
