feature/GDT-506-support-for-complex-spatial-searches
geoutils/gdelt.py
* boilerplate for new GDELT parser

--- a/geoutils/conf/geoutils.conf
+++ b/geoutils/conf/geoutils.conf
@@ -72,3 +72,24 @@ archive_dir: /var/tmp/geoingest/archive
 # "stripes" number of Accumulo tablet servers to distribute spatial
 # index records across.  Default is 1 for a pseudo-distributed arrangement
 #stripes: 1
+
+
+# The "[gdelt]" section contains configurable items around the GDELT
+# Library ingest process.
+# NOTE: this is more of a POC around high volume ingests and queries
+# and should not be used in production.
+[gdelt]
+# "threads" controls the number of parallel processes to run during the
+# ingest process.
+#threads: 5
+
+# "thread_sleep" is the sleep period between "inbound_dir" polls for
+# new files.  Partial seconds accepted.
+#thread_sleep: 2.0
+
+# "inbound_dir" sets the source directory to read ingest files from
+inbound_dir: /var/tmp/geogdelt
+
+# "archive_dir" sets the target archive directory to store ingest files to
+# If missing, an attempt will be made to create this directory
+archive_dir: /var/tmp/geogdelt/archive
