--- a/geoutils/config/tests/files/geoutils.conf
+++ b/geoutils/config/tests/files/geoutils.conf
@@ -52,3 +52,9 @@ shards: 10
 [spatial]
 order: geohash,reverse_time,stripe
 stripes: 10
+
+[gdelt]
+threads: 20
+inbound_dir: /var/tmp/geogdelt
+archive_dir: /var/tmp/geogdelt/archive
+thread_sleep: 18 
