feature/GDT-506-support-for-complex-spatial-searches
* GDELT ingest daemon and scanner support

--- a/geoutils/conf/log.conf
+++ b/geoutils/conf/log.conf
@@ -1,8 +1,8 @@
 [loggers]
-keys=root,geoingest,geostager,console
+keys=root,geoingest,geostager,geogdelt,console
 
 [handlers]
-keys=ingestFileHandler,stagerFileHandler,consoleHandler
+keys=ingestFileHandler,stagerFileHandler,gdeltFileHandler,consoleHandler
 
 [formatters]
 keys=simpleFormatter
@@ -27,6 +27,11 @@ level=DEBUG
 qualname=geostager
 handlers=stagerFileHandler
 
+[logger_geogdelt]
+level=DEBUG
+qualname=geogdelt
+handlers=gdeltFileHandler
+
 [handler_ingestFileHandler]
 class=handlers.TimedRotatingFileHandler
 level=DEBUG
@@ -38,6 +43,12 @@ class=handlers.TimedRotatingFileHandler
 level=DEBUG
 formatter=simpleFormatter
 args=(os.path.join(os.sep, 'var', 'tmp', 'geostager.log'), 'midnight')
+
+[handler_gdeltFileHandler]
+class=handlers.TimedRotatingFileHandler
+level=DEBUG
+formatter=simpleFormatter
+args=(os.path.join(os.sep, 'var', 'tmp', 'geogdelt.log'), 'midnight')
 
 [handler_consoleHandler]
 class=StreamHandler
